# my_cner

./: crawler.py  main.py  matrix.txt  project_context.md  pyproject.toml  run_mass_generation.py  run_stress_test.py  sanitizer.py  stress_test_output.jsonl  stress_test_sentences.txt  test_output.jsonl  test_sentences.txt  thesis_roadmap.md
src/: data_prep.py  generator.py  prompts.py  sanitizer.py  scraper.py  tokenizer.py
